# GameProj-FHI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  data.hpp  defs.h  defs.hpp  game.cpp  game.h  game.hpp  graphics.h  graphics_n_audio.cpp  graphics_n_audio.hpp  input.h  input.hpp  main.cpp  project.rc  saver.h  saver.hpp  structs.h  structs.hpp
.github/brkworkflows/: Linux.cmake  ci.yml
.github/workflows/: ci.yml
.run/: SAI___Score_Accumulating_Incremental.run.xml
assets/pixil/: Aplus.pixil  C.pixil  bg.pixil  flower.pixil  gearIcon.pixil  icon.pixil  manyflw.pixil  moneySymbol.pixil  upgrade.pixil  xpupgradeicon.pixil
components/: button.h  button.hpp  upgrader.cpp  upgrader.hpp
legacy/: README.md  board.h  saver.h
